--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,8 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.19.1</version>
 					<configuration>
-						<!-- <parallel>methods</parallel> -->
-						<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
+						<parallel>methods</parallel>
+						<useUnlimitedThreads>true</useUnlimitedThreads>
 						<properties>
 							<configurationParameters>
 								junit.jupiter.conditions.deactivate = *
